<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageSports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:transitionName="photoTransition"/>

        <TextView
            android:id="@+id/title"
            style="@style/SportsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageSports"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:padding="8dp"
            android:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/newsTitle"
            style="@style/SportsDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageSports"
            android:textColor="?android:textColorSecondary"
            android:padding="8dp"
            android:text="@string/news_placeholder" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/SportsDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsTitle"
            android:padding="8dp"
            android:text="@string/sports_info_placeholder" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
